--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Mathieu David <mathieudavid@mathieudavid.org>"]
 
 [dependencies]
 getopts = "*"
+handlebars = "*"
+rustc-serialize = "*"
