added markdown with 'pulldown-cmark', added basic styling, render of the toc is still not completely done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Mathieu David <mathieudavid@mathieudavid.org>"]
 getopts = "*"
 handlebars = "*"
 rustc-serialize = "*"
+pulldown-cmark = "*"
