Add rustdoc generated API doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ pulldown-cmark = "*"
 default = ["output"]
 debug = []
 output = []
+
+[[bin]]
+doc = false
+name = "mdbook"
+path = "src/bin/mdbook.rs"
