Fixed the code examples and added no_run to prevent them from running

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ handlebars = "*"
 rustc-serialize = "*"
 pulldown-cmark = "*"
 
+[dev-dependencies]
+tempdir = "*"
+
 [features]
 default = ["output"]
 debug = []
