--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "create books from markdown files (like Gitbook)"
 documentation = "http://azerupi.github.io/mdBook/index.html"
 repository = "https://github.com/azerupi/mdBook"
 keywords = ["book", "gitbook", "rustbook", "markdown"]
-license = "MPL"
+license = "MPL-2.0"
 readme = "README.md"
 exclude = [
     "book-example/*",
