Converted all css to stylus

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ addons:
     - nodejs
     - npm
 install:
-    - npm install stylus
+    - npm install stylus nib
 after_success:
   - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
