--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,15 +23,15 @@ pulldown-cmark = "~0.0.3"
 
 # Watch feature
 [dependencies.notify]
-notify = "^2.4.1"
+version = "^2.4.1"
 optional = true
 
 [dependencies.time]
-time = "^0.1.33"
+version = "^0.1.33"
 optional = true
 
 [dependencies.crossbeam]
-time = "^0.2.0"
+version = "^0.2.0"
 optional = true
 
 # Tests
