--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,11 @@ handlebars = "~0.12.0"
 rustc-serialize = "~0.3.16"
 pulldown-cmark = "~0.0.6"
 
-
 # Watch feature
-[dependencies.notify]
-notify = "^2.4.1"
-optional = true
+notify = { version = "~2.4.1", optional = true }
+time = { version = "~0.1.33", optional = true }
+crossbeam = { version = "~0.2.8", optional = true }
 
-[dependencies.time]
-time = "^0.1.33"
-optional = true
-
-[dependencies.crossbeam]
-time = "^0.2.0"
-optional = true
 
 # Tests
 [dev-dependencies]
