--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ notify = { version = "2.5.4", optional = true }
 time = { version = "0.1.34", optional = true }
 crossbeam = { version = "0.2.8", optional = true }
 
+# Serve feature
+iron = { version = "0.3", optional = true }
+staticfile = { version = "0.2", optional = true }
+websocket = { version = "0.16.1", optional = true}
+
 
 # Tests
 [dev-dependencies]
@@ -32,11 +37,12 @@ tempdir = "0.3.4"
 
 
 [features]
-default = ["output", "watch"]
+default = ["output", "watch", "serve"]
 debug = []
 output = []
 regenerate-css = []
 watch = ["notify", "time", "crossbeam"]
+serve = ["iron", "staticfile", "websocket"]
 
 [[bin]]
 doc = false
