--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ crossbeam = { version = "0.2.8", optional = true }
 # Serve feature
 iron = { version = "0.3", optional = true }
 staticfile = { version = "0.2", optional = true }
-websocket = { version = "0.16.1", optional = true}
+ws = { version = "0.4.6", optional = true}
 
 
 # Tests
@@ -42,7 +42,7 @@ debug = []
 output = []
 regenerate-css = []
 watch = ["notify", "time", "crossbeam"]
-serve = ["iron", "staticfile", "websocket"]
+serve = ["iron", "staticfile", "ws"]
 
 [[bin]]
 doc = false
