--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,6 @@ matrix:
           packages:
             - nodejs
             - npm
-    - os: linux
-      env: TARGET=x86_64-unknown-linux-musl CHANNEL=stable
     # Beta channel
     - os: osx
       env: TARGET=i686-apple-darwin CHANNEL=beta
@@ -40,8 +38,6 @@ matrix:
       env: TARGET=x86_64-apple-darwin CHANNEL=beta
     - os: linux
       env: TARGET=x86_64-unknown-linux-gnu CHANNEL=beta
-    - os: linux
-      env: TARGET=x86_64-unknown-linux-musl CHANNEL=beta
     # Nightly channel
     - os: osx
       env: TARGET=i686-apple-darwin CHANNEL=nightly
@@ -54,6 +50,13 @@ matrix:
       env: TARGET=x86_64-apple-darwin CHANNEL=nightly
     - os: linux
       env: TARGET=x86_64-unknown-linux-gnu CHANNEL=nightly
+
+  # Musl builds fail due to a bug in Rust (https://github.com/azerupi/mdBook/issues/158)
+  allow_failures:
+    - os: linux
+      env: TARGET=x86_64-unknown-linux-musl CHANNEL=stable
+    - os: linux
+      env: TARGET=x86_64-unknown-linux-musl CHANNEL=beta
     - os: linux
       env: TARGET=x86_64-unknown-linux-musl CHANNEL=nightly
 
