--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,12 @@ glob = "0.2"
 log = "0.3"
 env_logger = "0.3"
 toml = { version = "0.2", features = ["serde"] }
+open = "1.1"
 phf = "0.7"
 includedir = "0.2"
 
 # Watch feature
-notify = { version = "2.5.5", optional = true }
+notify = { version = "3.0", optional = true }
 time = { version = "0.1.34", optional = true }
 crossbeam = { version = "0.2.8", optional = true }
 
