--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -1,5 +1,3 @@
 title = "mdBook Documentation"
 description = "Create books from markdown files. Like Gitbook but implemented in Rust."
-
-[[authors]]
-name = "Mathieu David"
+author = "Mathieu David"
