--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ exclude = [
 clap = "2.24"
 handlebars = "0.26"
 serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 pulldown-cmark = "0.0.14"
 log = "0.3"
