Changes made with rustfmt including `use_try_shorthand`
Updated the project rustfmt.toml to include `use_try_shorthand = true`.
Run rustfmt on all rust sources.

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -10,6 +10,7 @@ enum_trailing_comma = true
 match_block_trailing_comma = true
 struct_trailing_comma = "Always"
 wrap_comments = true
+use_try_shorthand = true
 
 report_todo = "Always"
 report_fixme = "Always"
