Implemented a more friendly stylus error handling
Added error-chain as build-dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ ws = { version = "0.7", optional = true}
 [dev-dependencies]
 tempdir = "0.3.4"
 
+[build-dependencies]
+error-chain = "0.10"
+
 [features]
 default = ["output", "watch", "serve"]
 debug = []
