Created an initial mdbook-core crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,6 @@ serve = ["iron", "staticfile", "ws"]
 doc = false
 name = "mdbook"
 path = "src/bin/mdbook.rs"
+
+[workspace]
+members = ["mdbook-core"]
