fixed `cargo build --features=regenerate-css` on windows 10
also added cargo build --features=regenerate-css to appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 environment:
   global:
     PROJECT_NAME: mdBook
+    nodejs_version: "6"
   matrix:
     # Stable channel
     - TARGET: i686-pc-windows-msvc
@@ -31,12 +32,17 @@ install:
   - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
   - rustc -Vv
   - cargo -V
+  - ps: Install-Product node $env:nodejs_version
+  - node --version
+  - npm --version
+  - npm install -g stylus nib
 
 build: false
 
 # Equivalent to Travis' `script` phase
 test_script:
   - cargo build --verbose
+  - cargo build --verbose --features=regenerate-css
   - cargo test --verbose
 
 before_deploy:
