--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,11 @@ iron = { version = "0.5", optional = true }
 staticfile = { version = "0.4", optional = true }
 ws = { version = "0.7", optional = true}
 
+# Tests
+[dev-dependencies]
+tempdir = "0.3.4"
+pretty_assertions = "0.2.1"
+
 [build-dependencies]
 error-chain = "0.11"
 
