--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ clap = "2.24"
 handlebars = "0.27"
 serde = "1.0"
 serde_derive = "1.0"
-error-chain = "0.10.0"
+error-chain = { version = "0.10.0", features = [] }
 serde_json = "1.0"
 pulldown-cmark = "0.0.14"
 log = "0.3"
