--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde_derive = "1.0"
 error-chain = "0.10.0"
 serde_json = "1.0"
 pulldown-cmark = "0.0.14"
+lazy_static = "0.2"
 log = "0.3"
 env_logger = "0.4.0"
 toml = { version = "0.4", features = ["serde"] }
