--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ env_logger = "0.4.0"
 toml = { version = "0.4", features = ["serde"] }
 open = "1.1"
 regex = "0.2.1"
+tempdir = "0.3.4"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
@@ -41,7 +42,7 @@ ws = { version = "0.7", optional = true}
 
 # Tests
 [dev-dependencies]
-tempdir = "0.3.4"
+pretty_assertions = "0.2.1"
 
 [build-dependencies]
 error-chain = "0.10"
