Update documentation for mathjax

--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -1,3 +1,6 @@
 title = "mdBook Documentation"
 description = "Create book from markdown files. Like Gitbook but implemented in Rust"
 author = "Mathieu David"
+
+[output.html]
+mathjax-support = true
