--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,10 +40,6 @@ iron = { version = "0.5", optional = true }
 staticfile = { version = "0.4", optional = true }
 ws = { version = "0.7", optional = true}
 
-# Tests
-[dev-dependencies]
-tempdir = "0.3.4"
-
 [build-dependencies]
 error-chain = "0.11"
 
@@ -59,3 +55,6 @@ serve = ["iron", "staticfile", "ws"]
 doc = false
 name = "mdbook"
 path = "src/bin/mdbook.rs"
+
+[dev-dependencies]
+pretty_assertions = "0.2.1"
