[Cargo.toml] Fix package.exclude warnings
IIUC, the existing exclude rule has meant to do what it will do in the
future (gitignore-like matching, not glob-only matching). This fix makes
the rule to do what it was expected to do, and is forward-compatible,
therefore fixing the warning messages.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 build = "build.rs"
 exclude = [
     "book-example/*",
-    "src/theme/stylus",
+    "src/theme/stylus/**",
 ]
 
 [dependencies]
