--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -4,4 +4,5 @@ author = "Mathieu David"
 
 [output.html]
 additional-css = ["my_custom.css"]
+additional-js = ["my_custom.js"]
 mathjax-support = true
