--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ error-chain = "0.11"
 
 [dev-dependencies]
 select = "0.4"
-pretty_assertions = "*"
+pretty_assertions = "0.4"
 walkdir = "1.0"
 
 [features]
