Search: Configuration via book.toml

--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -4,3 +4,13 @@ author = "Mathieu David"
 
 [output.html]
 mathjax-support = true
+
+[output.html.search]
+enable = true
+limit-results = 20
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 2
+boost-paragraph = 1
+expand = true
+split-until-heading = 2
