--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,11 @@ ws = { version = "0.7", optional = true}
 [build-dependencies]
 error-chain = "0.11"
 
+[dev-dependencies]
+select = "0.4"
+pretty_assertions = "0.4"
+walkdir = "1.0"
+
 [features]
 default = ["output", "watch", "serve"]
 debug = []
