--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "mdbook"
 version = "0.0.26"
 authors = ["Mathieu David <mathieudavid@mathieudavid.org>"]
 description = "create books from markdown files (like Gitbook)"
-documentation = "http://azerupi.github.io/mdBook/index.html"
-repository = "https://github.com/azerupi/mdBook"
+documentation = "http://rust-lang-nursery.github.io/mdBook/index.html"
+repository = "https://github.com/rust-lang-nursery/mdBook"
 keywords = ["book", "gitbook", "rustbook", "markdown"]
 license = "MPL-2.0"
 readme = "README.md"
