--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,16 @@ exclude = [
 
 [dependencies]
 clap = "2.24"
+chrono = "0.4"
 handlebars = "0.29"
 serde = "1.0"
 serde_derive = "1.0"
 error-chain = "0.11.0"
 serde_json = "1.0"
 pulldown-cmark = "0.1"
-lazy_static = "0.2"
-log = "0.3"
-env_logger = "0.4.0"
+lazy_static = "1.0"
+log = "0.4"
+env_logger = "0.5.0-rc.1"
 toml = "0.4"
 memchr = "2.0.1"
 open = "1.1"
@@ -37,8 +38,8 @@ time = { version = "0.1.34", optional = true }
 crossbeam = { version = "0.3", optional = true }
 
 # Serve feature
-iron = { version = "0.5", optional = true }
-staticfile = { version = "0.4", optional = true }
+iron = { version = "0.6", optional = true }
+staticfile = { version = "0.5", optional = true }
 ws = { version = "0.7", optional = true}
 
 [build-dependencies]
@@ -47,7 +48,7 @@ error-chain = "0.11"
 [dev-dependencies]
 select = "0.4"
 pretty_assertions = "0.4"
-walkdir = "1.0"
+walkdir = "2.0"
 
 [features]
 default = ["output", "watch", "serve"]
