--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ memchr = "2.0.1"
 open = "1.1"
 regex = "0.2.1"
 tempdir = "0.3.4"
+itertools = "0.7.4"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
