--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ regex = "0.2.1"
 tempdir = "0.3.4"
 itertools = "0.7.4"
 tempfile = "2.2.0"
+shlex = "0.1.1"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
