--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tempdir = "0.3.4"
 itertools = "0.7.4"
 tempfile = "2.2.0"
 shlex = "0.1.1"
+toml-query = "0.6"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
