--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -1,7 +1,7 @@
 [book]
 title = "mdBook Documentation"
 description = "Create book from markdown files. Like Gitbook but implemented in Rust"
-author = "Mathieu David"
+authors = ["Mathieu David", "Michael-F-Bryan"]
 
 [output.html]
 mathjax-support = true
