--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,19 @@ chrono = "0.4"
 handlebars = "0.29"
 serde = "1.0"
 serde_derive = "1.0"
-error-chain = "0.11.0"
+error-chain = "0.11"
 serde_json = "1.0"
 pulldown-cmark = "0.1"
 lazy_static = "1.0"
 log = "0.4"
 env_logger = "0.5.0-rc.1"
 toml = "0.4"
-memchr = "2.0.1"
+memchr = "2.0"
 open = "1.1"
 regex = "0.2.1"
 tempdir = "0.3.4"
-itertools = "0.7.4"
-shlex = "0.1.1"
+itertools = "0.7"
+shlex = "0.1"
 toml-query = "0.6"
 
 # Watch feature
@@ -66,3 +66,5 @@ doc = false
 name = "mdbook"
 path = "src/bin/mdbook.rs"
 
+[workspace]
+members = ["book-example/src/for_developers/mdbook-wordcount"]
