--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,9 @@ iron = { version = "0.5", optional = true }
 staticfile = { version = "0.4", optional = true }
 ws = { version = "0.7", optional = true}
 
+# Search feature
+elasticlunr-rs = { version = "0.2", optional = true }
+
 [build-dependencies]
 error-chain = "0.11"
 
@@ -60,12 +63,13 @@ walkdir = "2.0"
 pulldown-cmark-to-cmark = "1.1.0"
 
 [features]
-default = ["output", "watch", "serve"]
+default = ["output", "watch", "serve", "search"]
 debug = []
 output = []
 regenerate-css = []
 watch = ["notify", "time", "crossbeam"]
 serve = ["iron", "staticfile", "ws"]
+search = ["elasticlunr-rs"]
 
 [[bin]]
 doc = false
