Convert project to use RelativePath where appropriate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ tempdir = "0.3.4"
 itertools = "0.7"
 shlex = "0.1"
 toml-query = "0.6"
+relative-path = { version = "0.3", features = ["serde"] }
 
 # Watch feature
 notify = { version = "4.0", optional = true }
