Translate relative links to other .md files during rendering (fixes #588)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ tempdir = "0.3.4"
 itertools = "0.7"
 shlex = "0.1"
 toml-query = "0.6"
+relative-path = { version = "0.3", features = ["serde"] }
+url = "1.6"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
