--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ error-chain = "0.11"
 select = "0.4"
 pretty_assertions = "0.4"
 walkdir = "2.0"
+pulldown-cmark-to-cmark = "1.1.0"
+quicli = "0.2.0"
 
 [features]
 default = ["output", "watch", "serve"]
