--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ ws = { version = "0.7", optional = true}
 
 # Search feature
 elasticlunr-rs = { version = "0.2", optional = true }
+ammonia = { version = "1.1", optional = true }
 
 [build-dependencies]
 error-chain = "0.11"
@@ -69,7 +70,7 @@ output = []
 regenerate-css = []
 watch = ["notify", "time", "crossbeam"]
 serve = ["iron", "staticfile", "ws"]
-search = ["elasticlunr-rs"]
+search = ["elasticlunr-rs", "ammonia"]
 
 [[bin]]
 doc = false
