--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ tempdir = "0.3.4"
 itertools = "0.7"
 shlex = "0.1"
 toml-query = "0.6"
+structopt = "0.2"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
