--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ staticfile = { version = "0.5", optional = true }
 ws = { version = "0.7", optional = true}
 
 # Search feature
-elasticlunr-rs = { version = "2.0", optional = true }
+elasticlunr-rs = { version = "2.2", optional = true, default-features = false }
 ammonia = { version = "1.1", optional = true }
 
 [build-dependencies]
