--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,6 @@ toml-query = "0.7"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
-time = { version = "0.1.34", optional = true }
-crossbeam = { version = "0.3", optional = true }
 
 # Serve feature
 iron = { version = "0.6", optional = true }
@@ -63,7 +61,7 @@ default = ["output", "watch", "serve", "search"]
 debug = []
 output = []
 regenerate-css = []
-watch = ["notify", "time", "crossbeam"]
+watch = ["notify"]
 serve = ["iron", "staticfile", "ws"]
 search = ["elasticlunr-rs", "ammonia"]
 
