--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde_json = "1.0"
 pulldown-cmark = "0.1.2"
 lazy_static = "1.0"
 log = "0.4"
-env_logger = "0.5.0-rc.1"
+env_logger = "0.5"
 toml = "0.4"
 memchr = "2.0"
 open = "1.1"
