Improve CI - Try to get OSX releases working - Use LTO for appveyor releases - Remove unused install.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: rust
 
+rust:
+  - stable
+  - beta
+  - nightly
+
+os:
+  - linux
+  - osx
+
 cache: 
   timeout: 360
   cargo: true
@@ -10,16 +19,10 @@ before_cache:
 env:
   global:
     - CRATE_NAME=mdbook
-    - TARGET=x86_64-unknown-linux-gnu
-
-install:
-  - sh ci/install.sh
-  - export PATH=$PATH:$HOME/.cargo/bin
 
 script:
-  - cargo build --all --no-default-features
-  - cargo build --verbose
-  - cargo test --verbose
+  - cargo test --all
+  - cargo test --all --no-default-features
 
 before_deploy:
   - sh ci/before_deploy.sh
