--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdbook"
-version = "0.2.1"
+version = "0.2.2-alpha.0"
 authors = [
     "Mathieu David <mathieudavid@mathieudavid.org>", 
     "Michael-F-Bryan <michaelfbryan@gmail.com>",
