--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
 language: rust
 
-rust:
-  - stable
-  - beta
-  - nightly
+matrix:
+  include:
+    - rust: stable
+      env: TARGET=x86_64-unknown-linux-gnu
+    - rust: beta
+      env: TARGET=x86_64-unknown-linux-gnu
+    - rust: nightly
+      env: TARGET=x86_64-unknown-linux-gnu
 
-os:
-  - linux
-  - osx
+    - rust: stable
+      os: osx
+      env: TARGET=x86_64-apple-darwin
 
-cache: 
+cache:
   timeout: 360
   cargo: true
 
