--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ authors = [
     "Michael-F-Bryan <michaelfbryan@gmail.com>",
     "Matt Ickstadt <mattico8@gmail.com>"
 ]
-description = "Creates a book from markdown files"
 documentation = "http://rust-lang-nursery.github.io/mdBook/index.html"
-repository = "https://github.com/rust-lang-nursery/mdBook"
+edition = "2018"
+exclude = ["/book-example/*"]
 keywords = ["book", "gitbook", "rustbook", "markdown"]
 license = "MPL-2.0"
 readme = "README.md"
-exclude = ["book-example/*"]
+repository = "https://github.com/rust-lang-nursery/mdBook"
+description = "Creates a book from markdown files"
 
 [dependencies]
 clap = "2.24"
