build: Fix stale builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,8 @@ script:
   - cargo test --all
   - cargo test --all --no-default-features
   - |
-    sh -ex;
     if [ "$TARGET" = x86_64-unknown-linux-gnu ] && [ "$TRAVIS_RUST_VERSION" = stable ]; then
-      rustup component add rustfmt;
-      rustfmt -vV;
+      rustup component add rustfmt && \
       cargo fmt --all -- --check;
     fi
 
