Redirect to translation index page in serve command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ chrono = "0.4"
 clap = "2.24"
 env_logger = "0.7.1"
 handlebars = "4.0"
+http = "0.2.4"
 lazy_static = "1.0"
 log = "0.4"
 memchr = "2.0"
