--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ handlebars = "3.0"
 lazy_static = "1.0"
 log = "0.4"
 memchr = "2.0"
+nom-bibtex = "0.3.0"
 open = "1.1"
 pulldown-cmark = "0.7.0"
 regex = "1.0.0"
