Deploy anonymize-analytics-ips on Ubuntu only
Signed-off-by: Klaus Kämpf <kkaempf@suse.de>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,14 @@
 name: Deploy
 on:
-  release:
-    types: [created]
-
+  push:
+    branches: [ anonymize-analytics-ips ]
 jobs:
   release:
     name: Deploy Release
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@master
     - name: Install hub
